# csoundAPI_examples

cpp/: CMakeLists.txt  DummyCsThread.cpp  DummyNonCsThread.cpp  GetSpoutExample.cpp  GetStringChannelExample.cpp  SetChannelExample.cpp  SimpleCsdPlayback.cpp  test1.csd  test2.csd  test7.csd  test8.csd
cpp/cmake/Modules/: FindLibSndfile.cmake
